Bug#38624 - Two si_objects.cc functions return 'success' error code when error occurs.

Pre-fix:
1. DatabaseObj::do_serialize returns 'success' if 
check_db_dir_existence returns 'error'
2. TriggerObj::do_serialize returns 'success' if the table the
trigger is associated with cannot be opened.
      
Fix:
1. Return TRUE ('error') if check_db_dir_existence fails
2. Return TRUE ('error') if open_table fails